--- a/style.css
+++ b/style.css
@@ -282,9 +282,13 @@ span {
         color: white;
       
     }
-
+    .card:hover {
+        box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.4);
+        transform: scale(1.08);
+    }
+    
     .content h2 {
-        color: black;
+        color: white;
         font-weight: 800;
     }
 
@@ -318,7 +322,7 @@ span {
     }
 
     span {
-        font-size: 50px;
+        font-size: 45px;
     }
 
     .div3 {
